--- a/login.css
+++ b/login.css
@@ -49,6 +49,7 @@ body {
     font-weight: 600;
     background-image: linear-gradient(90deg, #6e40aa, #6154c8, #4c6edb, #368ce1, #24aad8, #1ac7c2, #1ddea3, #30ee83, #52f667, #7ef658, #7ef658);
     background-clip: text;
+    -webkit-background-clip: text;
     letter-spacing: 3.5px;
     font-family: 'Titillium Web', sans-serif;
 }
