--- a/login.css
+++ b/login.css
@@ -3,6 +3,11 @@ body {
     background: linear-gradient(to right, #42275a, #734b6d);
     z-index: -1;
     overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .main {
